--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
       text-align: center;
       margin-top: 100px;
     }
-    input {
+    input, button {
       padding: 10px;
       font-size: 16px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
+      margin: 5px;
     }
     .error {
       color: red;
@@ -32,26 +29,32 @@
   <script>
     const API_KEY = "AIzaSyClmkLxcxXdKkrmGVY2fjTsVgf31RcMS_4";
     const SHEET_ID = "1YWCM1uctEsK-504WkMSdsBm5y56GBwRB3Hy_r1OYXuI";
-    const SHEET_RANGE = "A1:A100"; // הנחה שכל הסיסמאות נמצאות בטור A
+    const SHEET_RANGE = "A1:A100";
 
     async function checkPassword() {
-      const input = document.getElementById("passwordInput").value;
-      const errorMsg = document.getElementById("errorMessage");
+      const inputPassword = document.getElementById("passwordInput").value;
+      const errorDiv = document.getElementById("errorMessage");
+      errorDiv.textContent = ""; // נקה שגיאות קודמות
 
       try {
         const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${SHEET_RANGE}?key=${API_KEY}`);
-        const data = await response.json();
 
-        const passwords = data.values.flat(); // ממיר את הרשימה לדו-ממדית -> רגילה
-        if (passwords.includes(input)) {
-          // אם הסיסמה נכונה – מעביר למצגת
+        if (!response.ok) {
+          throw new Error("שגיאה בחיבור ל-Google Sheets. ודא שהקובץ ציבורי.");
+        }
+
+        const data = await response.json();
+        const passwords = (data.values || []).flat();
+
+        if (passwords.includes(inputPassword)) {
           window.location.href = "https://drive.google.com/file/d/1lQ9nD2bPksL8fD4fIrl6jRKSOhTHcsd-/view";
         } else {
-          errorMsg.textContent = "סיסמה שגויה. נסה שוב.";
+          errorDiv.textContent = "סיסמה שגויה. נסה שוב.";
         }
+
       } catch (error) {
-        console.error("שגיאה בשליפת נתונים מהגיליון:", error);
-        errorMsg.textContent = "אירעה שגיאה. נסה שוב מאוחר יותר.";
+        console.error(error);
+        errorDiv.textContent = "אירעה שגיאה. ודא שהגיליון פתוח לצפייה וכל הפרטים נכונים.";
       }
     }
   </script>
